service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-auth-service
spec:
  selector:
    app: node-auth
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000
