ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-app.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: node-auth-service
              port:
                number: 5000
